fixed resizing and changed demo video for dark mode page

--- a/src/styles/Boba.css
+++ b/src/styles/Boba.css
@@ -17,7 +17,6 @@
   overflow-x: hidden;
 }
 
-/* Dark Mode title */
 .boba-title {
   margin: 200px 0 0 0;
 }
@@ -33,11 +32,10 @@
 
 .boba-columns-container {
   margin: 0 280px 0 280px;
-  /* height: 100%; */
   display: grid;
   grid-template-columns: 220px 1fr;
   grid-template-rows: 1fr;
-  column-gap: 90px;
+  column-gap: 10%;
 }
 
 .boba-column-language {
@@ -107,7 +105,6 @@ img {
 
 .slider {
   position: relative;
-  /* height: 100vh; */
   height: 100%;
   display: flex;
   justify-content: center;
@@ -122,25 +119,20 @@ img {
   border-radius: 10px;
   margin-top: 80px;
 }
-.right-arrow {
+.right-arrow, .left-arrow {
   position: absolute;
   top: 50%;
-  right: 90px;
   font-size: 2.2rem;
   color: #000;
   z-index: 10;
   cursor: pointer;
   user-select: none;
 }
-.left-arrow {
-  position: absolute;
-  top: 50%;
+.right-arrow{
+  right: 90px;
+}
+.left-arrow{
   left: 90px;
-  font-size: 2.2rem;
-  color: #000;
-  z-index: 10;
-  cursor: pointer;
-  user-select: none;
 }
 .slide {
   opacity: 0;
@@ -152,10 +144,7 @@ img {
   transform: scale(1.08);
 }
 
-
-
-/* --------------------------------------------------------------------------------------------------------- */
-/* RESPONSIVE Screen Resizing */
+/* RESPONSIVE Screen Resizing  -------------------------------------------------------------------------------------------- */
 @media screen and (min-width: 100rem) {
   .boba-columns-container {
     margin-left: 22%;
@@ -165,24 +154,30 @@ img {
     width: 1200px;
     height: 1200px;
   }
-  .right-arrow {
+  .right-arrow, .left-arrow{
     right: 120px;
-  }
-  .left-arrow {
-    left: 120px;
   }
 }
 
-@media screen and (max-width: 55rem) {
+@media screen and (max-width: 70rem) {
   .boba-columns-container {
-    margin-left: 10%;
-    margin-right: 16%;
+    margin-left: 19%;
+    margin-right: 19%;
+    column-gap: 8%;
   }
   .image {
     width: 1000px;
-    height: 500px;
-    border-radius: 10px;
+    height: 480px;
   }
+  .right-arrow {
+    right: 5%;
+    font-size: 2.0rem;
+  }
+  .left-arrow {
+    left: 5%;
+    font-size: 2.0rem;
+  }
+  
 }
 
 /* IPAD */
@@ -241,7 +236,7 @@ img {
     right: 50px;
     font-size: 1.2rem;
   }
-  .left-arrow {
+  .left-arrow{
     left: 50px;
     font-size: 1.2rem;
   }
@@ -306,7 +301,7 @@ img {
   .image {
    width: 460px;
   }
-  .right-arrow {
+  .right-arrow{
     margin-top: 200px;
     right: 140px;
     font-size: 1.2rem;
@@ -327,10 +322,7 @@ img {
 }
 
 /* iphone 12 pro max, iphone 13 pro max */
-@media screen and (max-width: 428px) and (max-height : 926px)  {
-  .boba-title p{
-    color:blanchedalmond;
-  }
+@media screen and (max-width: 428px) and (max-height : 926px) {
   .boba-columns-container {
     margin-bottom: -180px;
   }
@@ -356,7 +348,6 @@ img {
   .boba-title p {
     font-size: 90px;
     line-height: 0;
-    color: purple;
   }
   .boba-columns-container {
     margin-bottom: -80px;
@@ -367,10 +358,7 @@ img {
   .image {
    width: 360px;
   }
-  .right-arrow {
-    margin-top: 170px;
-  }
-  .left-arrow {
+  .right-arrow, .left-arrow {
     margin-top: 170px;
   }
   .dark-end {
@@ -386,7 +374,6 @@ img {
   .boba-title p {
     font-size: 90px;
     line-height: 0;
-    color: black;
   }
   .boba-columns-container {
     margin-bottom: 55px;
@@ -397,10 +384,7 @@ img {
   .image {
    width: 360px;
   }
-  .right-arrow {
-    margin-top: 170px;
-  }
-  .left-arrow {
+  .right-arrow, .left-arrow {
     margin-top: 170px;
   }
   .dark-end {
@@ -411,7 +395,6 @@ img {
 /* 13, 13 Pro, 12, 12 Pro, Pixel 5 */
 @media screen and (max-width: 390px) and (device-height : 844px)  {
   .boba-title p{
-    color: blue;
     font-size: 80px;
   }
   .boba-title {
@@ -423,10 +406,7 @@ img {
   .boba-column-about {
     margin-top: 10px;
   }
-  .right-arrow {
-    margin-top: 170px;
-  }
-  .left-arrow {
+  .right-arrow, .left-arrow {
     margin-top: 170px;
   }
   .dark-end {
@@ -435,15 +415,9 @@ img {
 }
 
 
-/* iPhone 11 Pro
-iPhone 11 X
-iPhone 13 Mini
-iPhone 12 Mini
-iPhone X
-iPhone XS */
+/* iPhone 11 Pro, 11 X, 13 Mini, 12 Mini, X, XS */
 @media screen and (max-width: 375px) and (device-height : 812px)  {
   .boba-title p{
-    color: pink;
     font-size: 80px;
   }
   .boba-title {
@@ -455,10 +429,7 @@ iPhone XS */
   .boba-column-about {
     margin-top: 10px;
   }
-  .right-arrow {
-    margin-top: 170px;
-  }
-  .left-arrow {
+  .right-arrow, .left-arrow {
     margin-top: 170px;
   }
   .dark-end {
@@ -466,13 +437,12 @@ iPhone XS */
   }
 }
 
-/* SE */
+/* SE + 7, 8 */
 @media screen and (max-width: 375px) and (device-height : 667px)  {
   .boba-title {
     margin: -80px 0 -80px 0;
   }
   .boba-title p {
-    color: red;
     font-size: 80px;
   }
   .boba-columns-container {
@@ -484,7 +454,7 @@ iPhone XS */
   .image {
    width: 330px;
   }
-  .right-arrow {
+  .right-arrow{
     margin-top: 150px;
     right: 140px;
     font-size: 1.2rem;
@@ -505,7 +475,6 @@ iPhone XS */
     margin: -85px 0 -85px 0;
   }
   .boba-title p{
-    color: green;
     font-size: 80px;
   }
   .boba-columns-container {
@@ -517,15 +486,8 @@ iPhone XS */
   .image {
     width: 335px;
    }
-   .right-arrow {
+   .right-arrow, .left-arrow {
     margin-top: 155px;
-    right: 140px;
-    font-size: 1.2rem;
-  }
-  .left-arrow {
-    margin-top: 155px;
-    left: 140px;
-    font-size: 1.2rem;
   }
   .dark-end {
     margin: -75px 0 -25px 0;
@@ -536,7 +498,6 @@ iPhone XS */
 @media screen and (max-width: 22rem)  {
   .boba-title p{
     font-size: 65px;
-    color: maroon;
   }
   .boba-columns-container {
     margin-bottom: 180px;
@@ -578,5 +539,3 @@ iPhone XS */
     font-size: 15px;
   }
 }
-
-
